AC_INIT(XML/Ada,4.3w,report@adacore.com,xmlada)
AC_CANONICAL_SYSTEM

# Also update docs/xml.texi, and in AC_INIT above
XMLADA_MAJOR_VERSION=4
XMLADA_MINOR_VERSION=3w

AM_GNAT_BUILDS_SHARED

IFS=' '

# Defaults
AC_PROG_INSTALL
AC_PROG_LN_S
MKDIR="mkdir -p"

# Overrides
case "${host_os}" in
  lynxos*)
    CP="cp -p"
    MKDIR="mkdir -p -f"
    ;;

  cygwin*|mingw32*)
    LN="cp -p -f"
    ;;
esac

AC_SUBST(MKDIR)
AC_SUBST(CC)

LIB=`basename $libdir`
AC_SUBST(LIB)

AC_OUTPUT(shared.gpr Makefile Makefile.314 dom/test/default.gpr xmlada-config distrib/xmlada_shared.gpr)
