dnl Autoconf configure script for BfdAda
dnl Copyright 2001, 2002, 2003, 2005 Free Software Foundation, Inc.
dnl
dnl This file is part of BfdAda.
dnl 
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl 
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/bfd.ads)

AC_CANONICAL_SYSTEM
dnl AM_MAINTAINER_MODE
AM_INIT_AUTOMAKE(BfdAda,1.0)
AC_EXEEXT

# Current release settings
BFDADA_MAJOR_VERSION=1
BFDADA_MINOR_VERSION=0
BFDADA_MICRO_VERSION=0
BFDADA_VERSION=$BFDADA_MAJOR_VERSION.$BFDADA_MINOR_VERSION.$BFDADA_MICRO_VERSION

# checking for local tools
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_RANLIB

# Set the version number of GtkAda
AC_SUBST(BFDADA_VERSION)
AC_SUBST(BFDADA_MAJOR_VERSION)
AC_SUBST(BFDADA_MINOR_VERSION)
AC_SUBST(BFDADA_MICRO_VERSION)

EXEC_PREFIX="$prefix"
AC_SUBST(EXEC_PREFIX)

AC_CHECK_HEADERS(bfd.h dis-asm.h)

AC_CHECK_LIB(bfd,bfd_openr,[LIBS="$LIBS -lbfd"])

AC_CHECK_LIB(dl,dlopen,[CFLAGS="$CFLAGS -DHAVE_LIB_DL=1"])
AC_CHECK_LIB(intl,dcgettext,[CFLAGS="$CFLAGS -DHAVE_LIB_INTL=1"])

AUNITDIR=aunit-1.01
AC_SUBST(AUNITDIR)
AC_SUBST(CFLAGS)

AC_OUTPUT(
Makefile
bfdada.gpr
distrib/bfdada.gpr
)
